# voxel_engine

./: CMakeLists.txt  CMakePresets.json
res/: crosshair.frag  main.frag  main.vert  voxel.frag  voxel.vert
voxel_engine/: CMakeLists.txt  voxel_engine.cpp  voxel_engine.h
voxel_engine/blocks/: AirBlock.cpp  AirBlock.h  AndesiteBlock.cpp  AndesiteBlock.h  BedrockBlock.cpp  BedrockBlock.h  BlockRegister.h  CoalBlock.cpp  CoalBlock.h  CobblestoneBlock.cpp  CobblestoneBlock.h  DirtBlock.cpp  DirtBlock.h  IBlock.h  LeavesBlock.cpp  LeavesBlock.h  PlanksBlock.cpp  PlanksBlock.h  PlayersBlock.h  SlaneBlock.cpp  SlaneBlock.h  WaterBlock.cpp  WaterBlock.h  WoodBlock.cpp  WoodBlock.h
voxel_engine/graphics/: mesh.cpp  mesh.h  shaders.cpp  shaders.h  textures.cpp  textures.h  voxel_renderer.cpp  voxel_renderer.h
voxel_engine/loaders/: pngLoading.cpp  png_loading.cpp  png_loading.h
voxel_engine/voxels/: chunk.cpp  chunk.h  chunks.cpp  chunks.h  voxels.h
voxel_engine/window/: camera.cpp  camera.h  events.cpp  events.h  window.cpp  window.h
